--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@ iframe {
     
     <!-- טור ימין עם לוגו -->
     <div class="footer-logo">
-      <a href="/">
+      <a href="/web1">
         <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="גלצ פלוס">
       </a>
     </div>
