--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@ iframe {
             <p class="program-description">סיור יומי בנופי העברית לתקופותיה בתנ"ך, במשנה, בעברית המדוברת ובלשונם של העולים לארץ ישראל, וכן השוואת שמות ישובים ללשון האחות, הערבית. הפינה מלווה בקטעי נאומים וראיונות ששודרו בתוכניות גלצ ובקטעי שירים עבריים המרחיבים את הנושא ומשמחים כל לב</p>
           </div>
           <div class="col-6 col-md-4 col-lg-3 mb-5">
-            <a href="/תכניות/טוב-שבאתם/" class="program-link program-card-image">
+            <a href="program.html?id=tov-shebatem" class="program-link program-card-image">
               <img src="media/בתןך-הפודקאסט-פי-2-1.png" alt="טוב שבאתם" class="program-image">
             </a>
             <h6 class="program-title mt-2" title="טוב שבאתם" style="direction:rtl;">טוב שבאתם</h6>
