--- a/program.html
+++ b/program.html
@@ -131,7 +131,7 @@
   <i class="fa-solid fa-chevron-down"></i>
 </button>
 
-<link rel="stylesheet" href="/css/footer.css">
+<link rel="stylesheet" href="css/footer.css">
 
 <footer class="custom-footer">
   <div class="footer-container">
