--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="nav-center nav-links">
         <a class="nav-link" href="/קטגוריות/מוזיקה/">מוזיקה</a>
         <a class="nav-link" href="/הסכתים/">הסכתים</a>
-        <a class="nav-link" href="/קטגוריות/סדרות-רשת/">סדרות רשת</a>
+        <a class="nav-link" href="programsSeries.html">סדרות רשת</a>
         <a class="nav-link" href="/תרבות-ופנאי/">תרבות ופנאי</a>
         <a class="nav-link" href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a>
         <a class="nav-link" href="/ארכיון/">ארכיון</a>
@@ -69,7 +69,7 @@
   <div id="mobileMenu" class="mobile-menu">
     <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
     <a href="/הסכתים/" data-close="">הסכתים</a>
-    <a href="/קטגוריות/סדרות-רשת/" data-close="">סדרות רשת</a>
+    <a href="programsSeries.html" data-close="">סדרות רשת</a>
     <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
     <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
     <a href="/ארכיון/" data-close="">ארכיון</a>
@@ -142,7 +142,7 @@
             <h3>תרבות ופנאי</h3>
           </div>
           <div class="icon-item">
-            <a href="/קטגוריות/סדרות-רשת/">
+            <a href="programsSeries.html">
               <img src="media/סדרות-רשת-0d-1.png" alt="סדרות רשת">
             </a>
             <h3>סדרות רשת</h3>
