--- a/programsSeries.html
+++ b/programsSeries.html
@@ -3,11 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/programsSeriesStyle.css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="js/programsSeriesScript.js"></script>
 
 </head>
 <body>
+<link rel="stylesheet" href="css/NavigationBarStyle.css">
+
+<nav class="navbar" role="navigation" aria-label="Main Navigation">
+  <div class="nav-container">
+    <div class="nav-row">
+
+      <div class="nav-side brand">
+        <a href="/">
+          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
+        </a>
+      </div>
+
+
+      <!-- אמצע – הקישורים -->
+      <div class="nav-center nav-links">
+        <a class="nav-link" href="/קטגוריות/מוזיקה/">מוזיקה</a>
+        <a class="nav-link" href="/הסכתים/">הסכתים</a>
+        <a class="nav-link" href="programsSeries.html">סדרות רשת</a>
+        <a class="nav-link" href="/תרבות-ופנאי/">תרבות ופנאי</a>
+        <a class="nav-link" href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a>
+        <a class="nav-link" href="/ארכיון/">ארכיון</a>
+      </div>
+
+
+      <!-- שמאל – כפתורים -->
+      <div class="nav-side actions mr-1">
+        <a href="/חיפוש" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+          <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
+        </a>
+
+        <a href="/מועדפים" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
+          <i class="fa-regular fa-heart" style="font-size: 24px;"></i>
+        </a>
+
+        <button class="icon-btn mobile-toggle" id="mobileMenuBtn" aria-expanded="false" aria-controls="mobileMenu">
+          <i class="fa-solid fa-bars" id="mobileMenuIcon"></i>
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <div id="mobileMenu" class="mobile-menu">
+    <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
+    <a href="/הסכתים/" data-close="">הסכתים</a>
+    <a href="programsSeries.html" data-close="">סדרות רשת</a>
+    <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
+    <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
+    <a href="/ארכיון/" data-close="">ארכיון</a>
+  </div>
+</nav>
+
+<script>
+  const mobileBtn = document.getElementById("mobileMenuBtn");
+  const mobileMenu = document.getElementById("mobileMenu");
+  const mobileIcon = document.getElementById("mobileMenuIcon");
+
+  mobileBtn.addEventListener("click", () => {
+    const isOpen = mobileMenu.classList.toggle("open");
+    mobileBtn.setAttribute("aria-expanded", isOpen);
+    mobileIcon.classList.toggle("fa-bars", !isOpen);
+    mobileIcon.classList.toggle("fa-xmark", isOpen);
+  });
+
+  // סגירה אוטומטית בלחיצה על לינק עם data-close
+  document.querySelectorAll("#mobileMenu a[data-close]").forEach(link => {
+    link.addEventListener("click", () => {
+      mobileMenu.classList.remove("open");
+      mobileBtn.setAttribute("aria-expanded", false);
+      mobileIcon.classList.add("fa-bars");
+      mobileIcon.classList.remove("fa-xmark");
+    });
+  });
+</script>
+
+<!-- רווח עליון לתוכן כדי למנוע חפיפה -->
+<!-- <div style="height:84px;" > </div> -->
+
+	
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <div class="program-header">
   <h1 id="programTitle"></h1>
@@ -21,6 +103,75 @@
   <hr>
   <div class="episodes-grid" id="episodesGrid"></div>
 </div>
+
+<link rel="stylesheet" href="/css/footer.css">
+
+<footer class="custom-footer">
+  <div class="footer-container">
+    
+    <!-- טור ימין עם לוגו -->
+    <div class="footer-logo">
+      <a href="/web1">
+        <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="גלצ פלוס">
+      </a>
+    </div>
+
+    <!-- טור קישורים -->
+    <div class="footer-column footer-links text-center">
+      <h3>עמודי האתר</h3>
+      <ul>
+        <li><a href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a></li>
+        <li><a href="/קטגוריות/סדרות-רשת/">סדרות רשת</a></li>
+        <li><a href="/תרבות-ופנאי/">תרבות ופנאי</a></li>
+        <li><a href="/הסכתים/">הסכתים</a></li>
+        <li><a href="/קטגוריות/מוזיקה/">מוזיקה</a></li>
+        <li><a href="/ארכיון/">ארכיון</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column footer-links text-center">
+      <h3>תכנים פופלרים</h3>
+      <ul>
+        <li><a href="/תכניות/בטלים-בשישי/">בטלים בשישי</a></li>
+        <li><a href="/תכניות/דור-הביט/">דור הביט</a></li>
+        <li><a href="/תכניות/הבית-של-יעל/">הבית של יעל</a></li>
+        <li><a href="/תכניות/ספיישלים-מוזיקלים/">ספיישלים מוזיקלים</a></li>
+        <li><a href="/תכניות/מסע-כומתות/">מסע כומתות</a></li>
+        <li><a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">פודקאסט על מוזיקה וטכנולוגיה</a></li>
+      </ul>
+    </div>
+
+    <!-- טור אמצע: רשתות חברתיות -->
+    <div class="footer-column footer-social text-center">
+      <h3>עקבו אחרינו</h3>
+      <div class="social-icons">
+        <a href="https://did.li/EDo6q" target="_blank"><img src="media/tik-tok1.svg" alt="TikTok"></a>
+        <a href="https://did.li/a1imC" target="_blank"><img src="media/youtube1.svg" alt="YouTube"></a>
+        <a href="https://did.li/P62aa" target="_blank"><img src="media/facebook1.svg" alt="Facebook"></a>
+        <a href="https://did.li/hJ8TY" target="_blank"><img src="media/instagram1.svg" alt="Instagram"></a>
+      </div>
+    </div>
+
+    <!-- טור שמאל: הורדה בנייד -->
+    <div class="footer-column footer-apps text-center">
+      <h3>להורדה גם בנייד</h3>
+      <div class="app-buttons">
+        <a href="https://did.li/sbLZH" target="_blank">
+          <img src="media/screenshot_2025-08-08_162822-removebg-preview.png" alt="Google Play">
+        </a>
+        <a href="https://did.li/UOQIw" target="_blank">
+          <img src="media/screenshot_2025-08-08_162822-removebg-preview-1.png" alt="App Store">
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- זכויות יוצרים -->
+  <div class="footer-bottom">
+    <p>© 2025 כל הזכויות שמורות - גל"צ פלוס</p>
+  </div>
+</footer>
 
 </body>
 </html>
