--- a/program.html
+++ b/program.html
@@ -11,6 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/programStyle.css">
+  <link rel="stylesheet" href="css/NavigationBarStyle.css">
+  <link rel="stylesheet" href="css/footer.css">
+
   
   <script src="js/programScript.js" defer></script>
 
@@ -62,6 +65,11 @@
 <button id="load-more">
   טען עוד
   <i class="fa-solid fa-chevron-down"></i>
+</button>
+
+
+<button id="scrollTopBtn">
+  <i class="fa-solid fa-chevron-up"></i>
 </button>
 
 <div id="footer"></div>
