--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -171,7 +171,7 @@
     <div class="programs-grid">
             <div class="program-card">
                 <a href="/תכניות/אי-אמון/">
-                    <img src="/media/luanoc3n/בתןך-הפודקאסט-פי-2-3.png" alt="אי אמון">
+                    <img src="media/בתןך-הפודקאסט-פי-2-3.png" alt="אי אמון">
                     <h4 class="text-center">אי אמון</h4>
                 </a>
             </div>
@@ -183,7 +183,7 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/מלך-בלייצר-חיים/">
-                    <img src="/media/dxdnh53h/אבי.jpg" alt="מלך בלייצר חיים">
+                    <img src="media/אבי.jpg" alt="מלך בלייצר חיים">
                     <h4 class="text-center">מלך בלייצר חיים</h4>
                 </a>
             </div>
@@ -195,19 +195,19 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/הבית-של-יעל/">
-                    <img src="/media/2vnpbtqs/יעל.png" alt="הבית של יעל">
+                    <img src="media/יעל.png" alt="הבית של יעל">
                     <h4 class="text-center">הבית של יעל</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/שלוש-שתיים-אחת/">
-                    <img src="/media/00kloknl/בתןך-הפודקאסט-פי-2.png" alt="שלוש שתיים אחת">
+                    <img src="media/בתןך-הפודקאסט-פי-2.png" alt="שלוש שתיים אחת">
                     <h4 class="text-center">שלוש שתיים אחת</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/הצריף-הנודד/">
-                    <img src="/media/h13oucpt/whatsapp-image-2024-12-08-at-130852.jpeg" alt="הצריף הנודד">
+                    <img src="media/whatsapp-image-2024-12-08-at-130852.jpeg" alt="הצריף הנודד">
                     <h4 class="text-center">הצריף הנודד</h4>
                 </a>
             </div>
@@ -219,25 +219,25 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/standup4israel/">
-                    <img src="/media/u3cnnhkw/2.png" alt="StandUp4Israel">
+                    <img src="media/2.png" alt="StandUp4Israel">
                     <h4 class="text-center">StandUp4Israel</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/סיפורי-חיים/">
-                    <img src="/media/zvtdde2v/סיפורי-חייים.jpg" alt="סיפורי חיים">
+                    <img src="media/סיפורי-חייים.jpg" alt="סיפורי חיים">
                     <h4 class="text-center">סיפורי חיים</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/דור-הביט/">
-                    <img src="/media/3mnbs3eu/עותק-של-image00002.png" alt="דור הביט">
+                    <img src="media/עותק-של-image00002.png" alt="דור הביט">
                     <h4 class="text-center">דור הביט</h4>
                 </a>
             </div>
             <div class="program-card">
                 <a href="/תכניות/החצר-האחורית/">
-                    <img src="/media/vsqpfkp4/בתןך-הפודקאסט-פי-2-1-1.png" alt="החצר האחורית">
+                    <img src="media/בתןך-הפודקאסט-פי-2-1-1.png" alt="החצר האחורית">
                     <h4 class="text-center">החצר האחורית</h4>
                 </a>
             </div>
@@ -255,7 +255,7 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">
-                    <img src="/media/qvsiabmc/בתןך-הפודקאסט-פי-2-1.jpg" alt="פודקאסט על מוזיקה וטכנולוגיה">
+                    <img src="media/בתןך-הפודקאסט-פי-2-1.jpg" alt="פודקאסט על מוזיקה וטכנולוגיה">
                     <h4 class="text-center">פודקאסט על מוזיקה וטכנולוגיה</h4>
                 </a>
             </div>
