--- a/program.html
+++ b/program.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/footer.css">
 
   
-  <script src="js/programScript.js" defer></script>
+  <script src="js/programScript.js" async></script>
 
   <script>
 document.addEventListener("DOMContentLoaded", () => {
