--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -103,7 +103,7 @@
 
 <section class="podcasts-section">
     <div class="header-with-icon">
-        <img src="/media/הסכתים.png" alt="אייקון הסכתים" class="header-icon">
+        <img src="media/הסכתים.png" alt="אייקון הסכתים" class="header-icon">
         <h1 class="page-title" style="font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91; margin: 0;">
             הסכתים אחרונים ששודרו</h1>
     </div>
