--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <i class="bi bi-play-circle-fill"></i>
             </div>
           </a>
-          <a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/" class="program-card">
+          <a href="program.html?id=music-tech" class="program-card">
             <img src="media/בתןך-הפודקאסט-פי-2-1.jpg" alt="תכנית">
             <div class="play-button">
               <i class="bi bi-play-circle-fill"></i>
@@ -371,7 +371,7 @@
 
   <div class="row podcast-grid">
           <div class="col-6 col-md-4 col-lg-3 mb-5">
-            <a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/" class="program-link program-card-image">
+            <a href="program.html?id=music-tech" class="program-link program-card-image">
               <img src="media/בתןך-הפודקאסט-פי-2-1.jpg" alt="פודקאסט על מוזיקה וטכנולוגיה" class="program-image">
             </a>
             <h6 class="program-title mt-2" title="פודקאסט על מוזיקה וטכנולוגיה">פודקאסט על מוזיקה וטכנולוגיה</h6>
