--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -254,7 +254,7 @@
                 </a>
             </div>
             <div class="program-card">
-                <a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">
+                <a href="program.html?id=music-tech">
                     <img src="media/בתןך-הפודקאסט-פי-2-1.jpg" alt="פודקאסט על מוזיקה וטכנולוגיה">
                     <h4 class="text-center">פודקאסט על מוזיקה וטכנולוגיה</h4>
                 </a>
