--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
       <!-- שמאל – כפתורים -->
       <div class="nav-side actions mr-1">
-        <a href="/חיפוש" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+        <a href="/search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
           <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
         </a>
 
-        <a href="/מועדפים" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
+        <a href="favoritesPage.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
           <i class="fa-regular fa-heart" style="font-size: 24px;"></i>
         </a>
 
@@ -168,7 +168,7 @@
   <div class="video-programs-section">
 
     <div class="programs-grid">
-          <a href="/תכניות/אי-אמון/" class="program-card">
+          <a href="program.html?id=eamon" class="program-card">
             <img src="media/בתןך-הפודקאסט-פי-2-3.png" alt="תכנית">
             <div class="play-button">
               <i class="bi bi-play-circle-fill"></i>
