--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -170,7 +170,7 @@
         הסכתי גל"צ</h1>
     <div class="programs-grid">
             <div class="program-card">
-                <a href="/תכניות/אי-אמון/">
+                <a href="program.html?id=eamon">
                     <img src="media/בתןך-הפודקאסט-פי-2-3.png" alt="אי אמון">
                     <h4 class="text-center">אי אמון</h4>
                 </a>
@@ -435,7 +435,7 @@
     }
 </style>
 
-	<link rel="stylesheet" href="/css/footer.css">
+	<link rel="stylesheet" href="css/footer.css">
 
 <footer class="custom-footer">
   <div class="footer-container">
