--- a/search.html
+++ b/search.html
@@ -12,6 +12,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/NavigationBarStyle.css">
+  <link rel="stylesheet" href="css/footer.css">
+  
   <script>
   fetch("partials/navbar.html")
   .then(res => res.text())
@@ -42,7 +45,7 @@
   </div>
 </div>
 
-<div id="searchResultsTitle" style="display:none;">
+<div id="searchResultsTitle" style="display:none; text-align: center; margin-bottom: 20px;">
   תוצאות החיפוש עבור "<span id="searchQuery"></span>"
 </div>
 
