--- a/episodeVideo.html
+++ b/episodeVideo.html
@@ -3,23 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <title>פרק</title>
-  <link rel="stylesheet" href="css/episodeVideoPageStyle.css">
+  <meta name="description" content="צפו בפרק מהסדרה">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/NavigationBarStyle.css">
+  <link rel="stylesheet" href="css/footer.css">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&amp;display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="css/episodeVideoPageStyle.css" >
+
 </head>
 <body>
-
+<div id="navbar"></div>
 <section class="episode-section">
-  <div class="video-container">
-    <iframe id="videoFrame" allowfullscreen></iframe>
-    <h1 id="episodeTitle"></h1>
-  </div>
+  <div class="video-container" id="videoContainer">
+    <iframe id="videoFrame" frameborder="0" allowfullscreen></iframe>
+    <h1 id="episodeTitle" class="text-center mb-6" style="direction: RTL; margin-bottom: 20px;"></h1>
+</div>
 
-  <p id="episodeDescription"></p>
+
+  <p id="episodeDescription" style="text-align: right; direction: RTL;"></p>
 
   <hr>
   <h2>מוזמנים לצפות גם בפרקים נוספים:</h2>
   <div class="episodes-grid" id="otherEpisodes"></div>
 </section>
 
-<script src="js/episodeVideo.js"></script>
+  <div id="footer"></div>
+
+<script src="js\episodeVideo.js"></script>
+<script>
+  fetch("partials/navbar.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("navbar").innerHTML = html;
+    });
+
+  fetch("partials/footer.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("footer").innerHTML = html;
+    });
+</script>
+
 </body>
 </html>
