--- a/programsSeries.html
+++ b/programsSeries.html
@@ -1,177 +1,173 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/programsSeriesStyle.css">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&amp;display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="">
+    	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        background-color: #e6f0fa;
+        font-family: "Segoe UI", sans-serif;
+    }
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="js/programsSeriesScript.js"></script>
+    .program-content {
+        padding: 2rem 1rem;
+    }
 
-</head>
-<body>
-<link rel="stylesheet" href="css/NavigationBarStyle.css">
+    .description, .general-description p {
+        direction: rtl;
+        text-align: right;
+        font-size: 1.1rem;
+        line-height: 1.7;
+        color: #333;
+        background: #f4f4f4;
+        padding: 1rem;
+        border-radius: 8px;
+    }
 
-<nav class="navbar" role="navigation" aria-label="Main Navigation">
-  <div class="nav-container">
-    <div class="nav-row">
+    .episodes-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 30px;
+        margin-top: 20px;
+        direction: rtl;
+    }
 
-      <div class="nav-side brand">
-        <a href="/">
-          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
-        </a>
-      </div>
+    .episode-wrapper {
+        max-width: 300px;
+        margin: 0 auto;
+        text-align: center;    
+    }
 
+    .episode-title {
+        margin-top: 0.75rem;
+        font-size: 1rem;
+        color: #003f88;
+        font-weight: bold;
+    }
 
-      <!-- אמצע – הקישורים -->
-      <div class="nav-center nav-links">
-        <a class="nav-link" href="/קטגוריות/מוזיקה/">מוזיקה</a>
-        <a class="nav-link" href="/הסכתים/">הסכתים</a>
-        <a class="nav-link" href="programsSeries.html">סדרות רשת</a>
-        <a class="nav-link" href="/תרבות-ופנאי/">תרבות ופנאי</a>
-        <a class="nav-link" href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a>
-        <a class="nav-link" href="/ארכיון/">ארכיון</a>
-      </div>
+    .episode-card {
+        display: block;
+        background: #ffffff;
+        border-radius: 12px;
+        overflow: hidden;
+        transition: transform 0.3s, box-shadow 0.3s;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
+    .episode-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    }
 
-      <!-- שמאל – כפתורים -->
-      <div class="nav-side actions mr-1">
-        <a href="/חיפוש" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
-          <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
-        </a>
+    .episode-card img {
+        width: 100%;
+        height: 160px;
+        object-fit: cover;
+        display: block;
+        border-radius: 12px;
+    }
 
-        <a href="/מועדפים" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
-          <i class="fa-regular fa-heart" style="font-size: 24px;"></i>
-        </a>
+    @media (max-width: 600px) {
+        .episode-title {
+            font-size: 0.9rem;
+        }
+    }
 
-        <button class="icon-btn mobile-toggle" id="mobileMenuBtn" aria-expanded="false" aria-controls="mobileMenu">
-          <i class="fa-solid fa-bars" id="mobileMenuIcon"></i>
-        </button>
-      </div>
+    .program-header {
+        position: relative;
+        height: 60px; 
+        margin-top: 20px;
+    }
 
-    </div>
-  </div>
+    .program-title {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        text-align: center;
+    }
 
-  <div id="mobileMenu" class="mobile-menu">
-    <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
-    <a href="/הסכתים/" data-close="">הסכתים</a>
-    <a href="programsSeries.html" data-close="">סדרות רשת</a>
-    <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
-    <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
-    <a href="/ארכיון/" data-close="">ארכיון</a>
-  </div>
-</nav>
+    #favorite-icon {
+    margin-left: 20px;    
+    color: black;
+    /* ברירת מחדל */
+    transition: color 0.3s;
+    outline: none;
+  }
+
+  #favorite-icon.favorited {
+    color: #ff4d4d;
+    /* אדום בהיר */
+  }
+</style>
 
 <script>
-  const mobileBtn = document.getElementById("mobileMenuBtn");
-  const mobileMenu = document.getElementById("mobileMenu");
-  const mobileIcon = document.getElementById("mobileMenuIcon");
-
-  mobileBtn.addEventListener("click", () => {
-    const isOpen = mobileMenu.classList.toggle("open");
-    mobileBtn.setAttribute("aria-expanded", isOpen);
-    mobileIcon.classList.toggle("fa-bars", !isOpen);
-    mobileIcon.classList.toggle("fa-xmark", isOpen);
+  fetch("partials/navbar.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("navbar").innerHTML = html;
   });
 
-  // סגירה אוטומטית בלחיצה על לינק עם data-close
-  document.querySelectorAll("#mobileMenu a[data-close]").forEach(link => {
-    link.addEventListener("click", () => {
-      mobileMenu.classList.remove("open");
-      mobileBtn.setAttribute("aria-expanded", false);
-      mobileIcon.classList.add("fa-bars");
-      mobileIcon.classList.remove("fa-xmark");
-    });
+
+  fetch("partials/footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer").innerHTML = html;
   });
 </script>
-
-<!-- רווח עליון לתוכן כדי למנוע חפיפה -->
-<!-- <div style="height:84px;" > </div> -->
-
-	
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css\NavigationBarStyle.css">
+  <link rel="stylesheet" href="css/footer.css">
+    </script>
+  </head>
+  <body>
+    <div id="navbar"></div>
 
 <div class="program-header">
-  <h1 id="programTitle"></h1>
-  <button id="favorite-btn">
-    <i class="fa-regular fa-heart" id="favorite-icon"></i>
-  </button>
+    <div class="program-title">
+        <h1 id="programTitle" style="direction: rtl;"></h1>
+    </div>
+    <button id="favorite-btn" style="font-size:30px; background:none; border:none; cursor:pointer; outline: none;">
+      <i class="fa-regular fa-heart" id="favorite-icon"></i>
+    </button>
 </div>
 
-<div class="program-content">
-  <p id="description"></p>
-  <hr>
+<section class="program-section">
+
+    <div class="program-content container">
+
+  <div class="general-description mb-4" id="generalDescription"></div>
+
+  <div class="text-content mb-4">
+    <p class="description" id="description"></p>
+  </div>
+
+  <hr />
+
   <div class="episodes-grid" id="episodesGrid"></div>
+
 </div>
 
-<link rel="stylesheet" href="css/footer.css">
+</section>
 
-<footer class="custom-footer">
-  <div class="footer-container">
-    
-    <!-- טור ימין עם לוגו -->
-    <div class="footer-logo">
-      <a href="/web1">
-        <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="גלצ פלוס">
-      </a>
-    </div>
+    <div id="footer"></div>
+    <script src="js\programsSeriesScript.js" ></script>
 
-    <!-- טור קישורים -->
-    <div class="footer-column footer-links text-center">
-      <h3>עמודי האתר</h3>
-      <ul>
-        <li><a href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a></li>
-        <li><a href="/קטגוריות/סדרות-רשת/">סדרות רשת</a></li>
-        <li><a href="/תרבות-ופנאי/">תרבות ופנאי</a></li>
-        <li><a href="/הסכתים/">הסכתים</a></li>
-        <li><a href="/קטגוריות/מוזיקה/">מוזיקה</a></li>
-        <li><a href="/ארכיון/">ארכיון</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column footer-links text-center">
-      <h3>תכנים פופלרים</h3>
-      <ul>
-        <li><a href="/תכניות/בטלים-בשישי/">בטלים בשישי</a></li>
-        <li><a href="/תכניות/דור-הביט/">דור הביט</a></li>
-        <li><a href="/תכניות/הבית-של-יעל/">הבית של יעל</a></li>
-        <li><a href="/תכניות/ספיישלים-מוזיקלים/">ספיישלים מוזיקלים</a></li>
-        <li><a href="/תכניות/מסע-כומתות/">מסע כומתות</a></li>
-        <li><a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">פודקאסט על מוזיקה וטכנולוגיה</a></li>
-      </ul>
-    </div>
-
-    <!-- טור אמצע: רשתות חברתיות -->
-    <div class="footer-column footer-social text-center">
-      <h3>עקבו אחרינו</h3>
-      <div class="social-icons">
-        <a href="https://did.li/EDo6q" target="_blank"><img src="media/tik-tok1.svg" alt="TikTok"></a>
-        <a href="https://did.li/a1imC" target="_blank"><img src="media/youtube1.svg" alt="YouTube"></a>
-        <a href="https://did.li/P62aa" target="_blank"><img src="media/facebook1.svg" alt="Facebook"></a>
-        <a href="https://did.li/hJ8TY" target="_blank"><img src="media/instagram1.svg" alt="Instagram"></a>
-      </div>
-    </div>
-
-    <!-- טור שמאל: הורדה בנייד -->
-    <div class="footer-column footer-apps text-center">
-      <h3>להורדה גם בנייד</h3>
-      <div class="app-buttons">
-        <a href="https://did.li/sbLZH" target="_blank">
-          <img src="media/screenshot_2025-08-08_162822-removebg-preview.png" alt="Google Play">
-        </a>
-        <a href="https://did.li/UOQIw" target="_blank">
-          <img src="media/screenshot_2025-08-08_162822-removebg-preview-1.png" alt="App Store">
-        </a>
-      </div>
-    </div>
-
-  </div>
-
-  <!-- זכויות יוצרים -->
-  <div class="footer-bottom">
-    <p>© 2025 כל הזכויות שמורות - גל"צ פלוס</p>
-  </div>
-</footer>
-
-</body>
+  </body>
 </html>
