--- a/favoritesPage.html
+++ b/favoritesPage.html
@@ -9,93 +9,31 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/main.css">
-	<!-- Bootstrap CSS -->
 
-	<!-- Bootstrap JS -->
+  <link rel="stylesheet" href="css/NavigationBarStyle.css">
+  <link rel="stylesheet" href="css/footer.css">
+
+	<script>
+  fetch("partials/navbar.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("navbar").innerHTML = html;
+  });
+
+
+  fetch("partials/footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer").innerHTML = html;
+  });
+</script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 
 <body>
-	<link rel="stylesheet" href="/css/NavigationBarStyle.css">
 
-<nav class="navbar" role="navigation" aria-label="Main Navigation">
-  <div class="nav-container">
-    <div class="nav-row">
-
-      <div class="nav-side brand">
-        <a href="/">
-          <img src="/media/rbinfkzw/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
-        </a>
-      </div>
-
-
-      <!-- אמצע – הקישורים -->
-      <div class="nav-center nav-links">
-        <a class="nav-link" href="/קטגוריות/מוזיקה/">מוזיקה</a>
-        <a class="nav-link" href="/הסכתים/">הסכתים</a>
-        <a class="nav-link" href="/קטגוריות/סדרות-רשת/">סדרות רשת</a>
-        <a class="nav-link" href="/תרבות-ופנאי/">תרבות ופנאי</a>
-        <a class="nav-link" href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a>
-        <a class="nav-link" href="/ארכיון/">ארכיון</a>
-      </div>
-
-
-      <!-- שמאל – כפתורים -->
-      <div class="nav-side actions mr-1">
-        <a href="/חיפוש" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
-          <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
-        </a>
-
-        <a href="/מועדפים" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
-          <i class="fa-regular fa-heart" style="font-size: 24px;"></i>
-        </a>
-
-        <button class="icon-btn mobile-toggle" id="mobileMenuBtn" aria-expanded="false" aria-controls="mobileMenu">
-          <i class="fa-solid fa-bars" id="mobileMenuIcon"></i>
-        </button>
-      </div>
-
-    </div>
-  </div>
-
-  <div id="mobileMenu" class="mobile-menu">
-    <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
-    <a href="/הסכתים/" data-close="">הסכתים</a>
-    <a href="/קטגוריות/סדרות-רשת/" data-close="">סדרות רשת</a>
-    <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
-    <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
-    <a href="/ארכיון/" data-close="">ארכיון</a>
-  </div>
-</nav>
-
-<script>
-  const mobileBtn = document.getElementById("mobileMenuBtn");
-  const mobileMenu = document.getElementById("mobileMenu");
-  const mobileIcon = document.getElementById("mobileMenuIcon");
-
-  mobileBtn.addEventListener("click", () => {
-    const isOpen = mobileMenu.classList.toggle("open");
-    mobileBtn.setAttribute("aria-expanded", isOpen);
-    mobileIcon.classList.toggle("fa-bars", !isOpen);
-    mobileIcon.classList.toggle("fa-xmark", isOpen);
-  });
-
-  // סגירה אוטומטית בלחיצה על לינק עם data-close
-  document.querySelectorAll("#mobileMenu a[data-close]").forEach(link => {
-    link.addEventListener("click", () => {
-      mobileMenu.classList.remove("open");
-      mobileBtn.setAttribute("aria-expanded", false);
-      mobileIcon.classList.add("fa-bars");
-      mobileIcon.classList.remove("fa-xmark");
-    });
-  });
-</script>
-
-<!-- רווח עליון לתוכן כדי למנוע חפיפה -->
-<!-- <div style="height:84px;" > </div> -->
-
+ <div id="navbar"></div>
 	
 <style>
 body {
@@ -206,6 +144,15 @@ h1.text-center.mt-3 {
     justify-items: center;
     margin-bottom: 35px;
 }
+.card-link {
+    cursor: pointer;
+    pointer-events: auto;
+}
+
+.favorite-card img {
+    display: block;
+}
+
 
 /* רספונסיבי */
 @media (max-width: 1200px) {
@@ -214,14 +161,16 @@ h1.text-center.mt-3 {
     }
 }
 @media (max-width: 767px) {
+    .favorites-row {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
     .card-title {
         font-size: 18px;
     }
     .no-favorites h2 { font-size: 24px; }
     .no-favorites h3 { font-size: 16px; }
-    .favorites-row {
-        grid-template-columns: 1fr;
-    }
+    
 }
 </style>
 
@@ -236,130 +185,72 @@ h1.text-center.mt-3 {
 const favoritesContainer = document.getElementById("favorites-container");
 let favorites = JSON.parse(localStorage.getItem("favoritePrograms") || "[]");
 
+favoritesContainer.addEventListener("click", (e) => {
+  // אם לחצו על כפתור הסרה (או על האייקון שבתוכו)
+  const btn = e.target.closest(".remove-btn");
+  if (btn) {
+    e.stopPropagation();
+
+    // קבל את ה-id כמחרוזת (בטוח) וראה להסיר את כל הפריטים עם אותו id
+    const idStr = String(btn.dataset.id);
+
+    // מסירים על ידי השוואת מחרוזות (עמידות לטיפוסים)
+    favorites = favorites.filter(f => String(f.id) !== idStr);
+
+    localStorage.setItem("favoritePrograms", JSON.stringify(favorites));
+    renderFavorites();
+    return;
+  }
+
+  // ניווט כאשר לוחצים על התמונה / קישור הכרטיס
+  const img = e.target.closest(".card-link");
+  if (img) {
+    window.location.href = img.dataset.url;
+  }
+});
+
 function renderFavorites() {
-    favoritesContainer.innerHTML = "";
+  favoritesContainer.innerHTML = "";
 
-    if (favorites.length === 0) {
-        favoritesContainer.classList.add("no-favorites");
-        favoritesContainer.innerHTML = `
-            <h2>עדיין לא נוספו תכניות מועדפות</h2>
-            <h3>❤ על מנת להוסיף תכנית למועדפים, חפשו את כפתור הלב בעמוד התכנית</h3>
-        `;
-    } else {
-        favoritesContainer.classList.remove("no-favorites");
+  if (favorites.length === 0) {
+    favoritesContainer.classList.add("no-favorites");
+    favoritesContainer.innerHTML = `
+      <h2>עדיין לא נוספו תכניות מועדפות</h2>
+      <h3>❤ על מנת להוסיף תכנית למועדפים, חפשו את כפתור הלב בעמוד התכנית</h3>
+    `;
+    return;
+  }
 
-        const row = document.createElement("div");
-        row.classList.add("favorites-row");
+  favoritesContainer.classList.remove("no-favorites");
 
-        favorites.forEach(fav => {
-            const card = document.createElement("div");
-            card.classList.add("favorite-card");
-            card.innerHTML = `
-                <a href="${fav.urlProgram}">
-                    <img src="${fav.image}" class="card-img-top" alt="${fav.name}">
-                </a>
-                <div class="card-content">
-                    <h4 class="card-title" style="direction:rtl;">${fav.name}</h4>
-                    <span class="remove-btn" data-id="${fav.id}" title="הסר מהמועדפים">
-                        <i class="fa-solid fa-heart"></i>
-                    </span>
-                </div>
-            `;
-            row.appendChild(card);
-        });
+  const row = document.createElement("div");
+  row.classList.add("favorites-row");
 
-        favoritesContainer.appendChild(row);
+  favorites.forEach(fav => {
+    const card = document.createElement("div");
+    card.classList.add("favorite-card");
+    card.innerHTML = `
+      <img src="${fav.image}" class="card-img-top card-link" data-url="${fav.urlProgram}" alt="${fav.name}">
 
-        // הסרת מועדפים
-        document.querySelectorAll(".remove-btn").forEach(btn => {
-            btn.addEventListener("click", () => {
-                const id = parseInt(btn.getAttribute("data-id"));
-                const index = favorites.findIndex(f => f.id === id);
-                if (index !== -1) {
-                    favorites.splice(index, 1);
-                    localStorage.setItem("favoritePrograms", JSON.stringify(favorites));
-                    renderFavorites();
-                }
-            });
-        });
-    }
+      <div class="card-content">
+        <h4 class="card-title">${fav.name}</h4>
+        <span class="remove-btn" data-id="${fav.id}" title="הסר מהמועדפים">
+          <i class="fa-solid fa-heart"></i>
+        </span>
+      </div>
+    `;
+    row.appendChild(card);
+  });
+
+  favoritesContainer.appendChild(row);
 }
 
 renderFavorites();
 </script>
 
 
-	<link rel="stylesheet" href="/css/footer.css">
 
-<footer class="custom-footer">
-  <div class="footer-container">
-    
-    <!-- טור ימין עם לוגו -->
-    <div class="footer-logo">
-      <a href="/">
-        <img src="/media/rbinfkzw/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="גלצ פלוס">
-      </a>
-    </div>
-
-    <!-- טור קישורים -->
-    <div class="footer-column footer-links text-center">
-      <h3>עמודי האתר</h3>
-      <ul>
-        <li><a href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a></li>
-        <li><a href="/קטגוריות/סדרות-רשת/">סדרות רשת</a></li>
-        <li><a href="/תרבות-ופנאי/">תרבות ופנאי</a></li>
-        <li><a href="/הסכתים/">הסכתים</a></li>
-        <li><a href="/קטגוריות/מוזיקה/">מוזיקה</a></li>
-        <li><a href="/ארכיון/">ארכיון</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column footer-links text-center">
-      <h3>תכנים פופלרים</h3>
-      <ul>
-        <li><a href="/תכניות/בטלים-בשישי/">בטלים בשישי</a></li>
-        <li><a href="/תכניות/דור-הביט/">דור הביט</a></li>
-        <li><a href="/תכניות/הבית-של-יעל/">הבית של יעל</a></li>
-        <li><a href="/תכניות/ספיישלים-מוזיקלים/">ספיישלים מוזיקלים</a></li>
-        <li><a href="/תכניות/מסע-כומתות/">מסע כומתות</a></li>
-        <li><a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">פודקאסט על מוזיקה וטכנולוגיה</a></li>
-      </ul>
-    </div>
-
-    <!-- טור אמצע: רשתות חברתיות -->
-    <div class="footer-column footer-social text-center">
-      <h3>עקבו אחרינו</h3>
-      <div class="social-icons">
-        <a href="https://did.li/EDo6q" target="_blank"><img src="/media/jzrgbn12/tik-tok1.svg" alt="TikTok"></a>
-        <a href="https://did.li/a1imC" target="_blank"><img src="/media/xa3hv3cn/youtube1.svg" alt="YouTube"></a>
-        <a href="https://did.li/P62aa" target="_blank"><img src="/media/sozpt2h4/facebook1.svg" alt="Facebook"></a>
-        <a href="https://did.li/hJ8TY" target="_blank"><img src="/media/u3hhzcov/instagram1.svg" alt="Instagram"></a>
-      </div>
-    </div>
-
-    <!-- טור שמאל: הורדה בנייד -->
-    <div class="footer-column footer-apps text-center">
-      <h3>להורדה גם בנייד</h3>
-      <div class="app-buttons">
-        <a href="https://did.li/sbLZH" target="_blank">
-          <img src="/media/jnpglslh/screenshot_2025-08-08_162822-removebg-preview.png" alt="Google Play">
-        </a>
-        <a href="https://did.li/UOQIw" target="_blank">
-          <img src="/media/fpcogxol/screenshot_2025-08-08_162822-removebg-preview-1.png" alt="App Store">
-        </a>
-      </div>
-    </div>
-
-  </div>
-
-  <!-- זכויות יוצרים -->
-  <div class="footer-bottom">
-    <p>© 2025 כל הזכויות שמורות - גל"צ פלוס</p>
-  </div>
-</footer>
-
-
-
+  <div id="footer"></div>
 
 
 </body></html>
