--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -144,8 +144,8 @@
             </div>
             <div class="program-card">
                 <a href="/תכניות/עוד-זה-מדבר-וזה-בא/">
-                    <img src="/media/5pzoplvy/בתןך-הפודקאסט-פי-2-2.png" alt="עוד זה מדבר וזה בא">
-                    <h4 class="text-center">עוד זה מדבר וזה בא</h4>
+                    <img src="media/בתןך-הפודקאסט-פי-2-3.png" alt="עוד זה מדבר וזה בא">
+                    <h4 class="text-center">עוד זה מדבר וזה בא1</h4>
                 </a>
             </div>
             <div class="program-card">
@@ -344,6 +344,7 @@
             /* grid-template-columns: 1fr !important; ניסיון בלי*/
             grid-template-columns: repeat(2, 1fr);
             gap: 20px;
+            padding: 10px;
         }
     }
 
