--- a/favoritesPage.html
+++ b/favoritesPage.html
@@ -233,7 +233,7 @@ function renderFavorites() {
       <img src="${fav.image}" class="card-img-top card-link" data-url="${fav.urlProgram}" alt="${fav.name}">
 
       <div class="card-content">
-        <h4 class="card-title">${fav.name}</h4>
+        <h4 class="card-title" dir="rtl">${fav.name}</h4>
         <span class="remove-btn" data-id="${fav.id}" title="הסר מהמועדפים">
           <i class="fa-solid fa-heart"></i>
         </span>
