--- a/sadarotReshet.html
+++ b/sadarotReshet.html
@@ -26,7 +26,7 @@
 
       <div class="nav-side brand">
         <a href="/">
-          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
+          <img src="/media/rbinfkzw/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
         </a>
       </div>
 
@@ -100,40 +100,40 @@
 <link rel="stylesheet" href="/css/CategoryStyle.css">
 
 
-    <title>ילדים ונוער</title>
+    <title>סדרות רשת</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 
     <div class="header-with-icon">
-            <img src="media/ילדים-ונוער.png" alt="ילדים ונוער" class="header-icon">
+            <img src="media/סדרות-רשת-0d-1.png" alt="סדרות רשת" class="header-icon">
 
         <h1 class="page-title" style="font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91; margin: 0;">
-            ילדים ונוער</h1>
+            סדרות רשת</h1>
     </div>
     <div class="programs-grid">
-            <div class="program-card text-center">
-                <a href="/תכניות/שבת-בבוקר-עם-ירדן-ודידי/">
-                    <img src="media/בתןך-הפודקא1סט-פי-2-1.png" alt="שבת בבוקר עם ירדן ודידי">
-                    <h4>שבת בבוקר עם ירדן ודידי</h4>
+        <div class="program-card text-center">
+                <a href="programsSeries.html?id=histacharty">
+                    <img src="media\טאב.png">
+                    <h4>התשחררתי, מה עכשיו?</h4>
                 </a>
             </div>
             <div class="program-card text-center">
-                <a href="/תכניות/הבגרות-המשודרת/">
-                    <img src="/media/d0nogiet/2-3.jpg" alt="הבגרות המשודרת">
-                    <h4>הבגרות המשודרת</h4>
+                <a href="programsSeries.html?id=masa-comtot">
+                    <img src="media\האדם-השלישי.png" alt="מסע כומתות">
+                    <h4>מסע כומתות</h4>
                 </a>
             </div>
             <div class="program-card text-center">
-                <a href="/תכניות/תיבה-מזמרת/">
-                    <img src="/media/sz3ojbq3/2-2.jpg" alt="תיבה מזמרת">
-                    <h4>תיבה מזמרת</h4>
+                <a href="/תכניות/טיול-לא-מאורגן/">
+                    <img src="/media/5nmhexsu/gemini_generated_image_arr9gnarr9gnarr9.png" alt="טיול לא מאורגן">
+                    <h4>טיול לא מאורגן</h4>
                 </a>
             </div>
             <div class="program-card text-center">
-                <a href="/תכניות/האוניברסיטה-המשודרת-לילדים/">
-                    <img src="/media/5s2n0aje/2-6.jpg" alt="האוניברסיטה המשודרת לילדים">
-                    <h4>האוניברסיטה המשודרת לילדים</h4>
+                <a href="/תכניות/המיוחדים-של-גלצ/">
+                    <img src="/media/ut0flvh4/המיוחדים-של-גלצ.png" alt="המיוחדים של גל&quot;צ">
+                    <h4>המיוחדים של גל"צ</h4>
                 </a>
             </div>
     </div>
