--- a/podcastsPage.html
+++ b/podcastsPage.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/NavigationBarStyle.css">
     <link rel="stylesheet" href="css/footer.css">
-    
+    <script src="js/newPodcastsEpisodesScript.js" ></script>
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -75,64 +75,10 @@
             הסכתים אחרונים ששודרו</h1>
     </div>
 
-    <div class="custom-episodes-wrapper">
-            <div class="custom-episode-card">
-                <a href="/episode?guid=b46c9faa-e282-4e2a-be10-b3bf0086df32&amp;programId=1653">
-                    <i class="fa-solid fa-circle-play"></i>
-                </a>
-                <div class="card-text">
-                    <h4 style="direction: rtl; text-align: right;">אי אמון - פרק 11 | ג'קי לוי </h4>
-                    <p style="direction: rtl; text-align: right; font-size: 20px;">אי אמון</p>
-                    <p style="direction: rtl; text-align: right; font-size: 19x;">26.12.25</p>
-                </div>
-                    <a href="/episode?guid=b46c9faa-e282-4e2a-be10-b3bf0086df32&amp;programId=1653">
-                        <img src="https://www.omnycontent.com/d/clips/6dcbc33f-1fb6-49de-9ae2-ad8a00c01523/b3419733-5633-4a6f-b1fa-b38400bfb5e3/b46c9faa-e282-4e2a-be10-b3bf0086df32/image.jpg?t=1766743358&amp;size=Large" alt="אי אמון - פרק 11 | ג'קי לוי ">
-                    </a>
-            </div>
-            <div class="custom-episode-card">
-                <a href="/episode?guid=f829e026-574c-45e7-8c1c-b3be00ce573b&amp;programId=1567">
-                    <i class="fa-solid fa-circle-play"></i>
-                </a>
-                <div class="card-text">
-                    <h4 style="direction: rtl; text-align: right;">קולה של אמא | פרק 15: אדריאן וסמדר אוקמפו</h4>
-                    <p style="direction: rtl; text-align: right; font-size: 20px;">קולה של אמא - ההסכת</p>
-                    <p style="direction: rtl; text-align: right; font-size: 19x;">26.12.25</p>
-                </div>
-                    <a href="/episode?guid=f829e026-574c-45e7-8c1c-b3be00ce573b&amp;programId=1567">
-                        <img src="https://www.omnycontent.com/d/playlist/6dcbc33f-1fb6-49de-9ae2-ad8a00c01523/813204f5-eef3-44de-baa4-b35400a1d9c0/46cc6304-aa5d-4f61-9c52-b35400a1dd9c/image.jpg?t=1757497783&amp;size=Large" alt="קולה של אמא | פרק 15: אדריאן וסמדר אוקמפו">
-                    </a>
-            </div>
-            <div class="custom-episode-card">
-                <a href="/episode?guid=7b3149fd-2823-4703-a843-b3af00ceda7b&amp;programId=1438">
-                    <i class="fa-solid fa-circle-play"></i>
-                </a>
-                <div class="card-text">
-                    <h4 style="direction: rtl; text-align: right;">אמיר | אנושי, אנושי מדי פרק 16</h4>
-                    <p style="direction: rtl; text-align: right; font-size: 20px;">אנושי, אנושי מדי</p>
-                    <p style="direction: rtl; text-align: right; font-size: 19x;">11.12.25</p>
-                </div>
-                    <a href="/episode?guid=7b3149fd-2823-4703-a843-b3af00ceda7b&amp;programId=1438">
-                        <img src="https://www.omnycontent.com/d/programs/6dcbc33f-1fb6-49de-9ae2-ad8a00c01523/63a2ff7b-d81c-47c4-b8d5-b139009dc3de/image.jpg?t=1710927932&amp;size=Large" alt="אמיר | אנושי, אנושי מדי פרק 16">
-                    </a>
-            </div>
-            <div class="custom-episode-card">
-                <a href="/episode?guid=18b52c46-271b-4431-a38e-b3b8008c69cd&amp;programId=1627">
-                    <i class="fa-solid fa-circle-play"></i>
-                </a>
-                <div class="card-text">
-                    <h4 style="direction: rtl; text-align: right;">מלך בלייצר חיים - פרק 6 | אבי הרוש מארח את תומר שורץ</h4>
-                    <p style="direction: rtl; text-align: right; font-size: 20px;">מלך בלייצר חיים</p>
-                    <p style="direction: rtl; text-align: right; font-size: 19x;">19.12.25</p>
-                </div>
-                    <a href="/episode?guid=18b52c46-271b-4431-a38e-b3b8008c69cd&amp;programId=1627">
-                        <img src="https://www.omnycontent.com/d/clips/6dcbc33f-1fb6-49de-9ae2-ad8a00c01523/2c77b74a-e989-472f-be10-b36800cc98e1/18b52c46-271b-4431-a38e-b3b8008c69cd/image.jpg?t=1766133143&amp;size=Large" alt="מלך בלייצר חיים - פרק 6 | אבי הרוש מארח את תומר שורץ">
-                    </a>
-            </div>
-    </div>
+    <div class="custom-episodes-wrapper" id="latest-episodes"></div>
+
 </section>
-
-
-
+ 
     <h1 class="page-title text-center mt-3" style="font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91; margin: 0; margin-top: 10px;">
         הסכתי גל"צ</h1>
     <div class="programs-grid">
@@ -155,7 +101,7 @@
                 </a>
             </div>
             <div class="program-card">
-                <a href="/תכניות/קולה-של-אמא-ההסכת/">
+                <a href="program.html?id=kulshPodcast">
                     <img src="media/בתןך-הפודקאסט-פי-2-2.jpg" alt="קולה של אמא - ההסכת">
                     <h4 class="text-center">קולה של אמא - ההסכת</h4>
                 </a>
@@ -339,14 +285,21 @@
         }
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 300px) {
         .programs-grid {
             /* grid-template-columns: 1fr !important; ניסיון בלי*/
             grid-template-columns: repeat(2, 1fr);
             gap: 20px;
             padding: 10px;
         }
-    }
+        .program-card img {
+        width: 100%;
+        object-fit: cover;
+        border-radius: 12px;
+        display: block;
+        margin: 0 auto;
+
+    }}
 
     .center-icon {
         position: relative;
