--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="nav-row">
 
       <div class="nav-side brand">
-        <a href="/web1">
-          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
+        <a href="/">
+          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
 
@@ -51,7 +51,7 @@
 
       <!-- שמאל – כפתורים -->
       <div class="nav-side actions mr-1">
-        <a href="/search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+        <a href="search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
           <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
         </a>
 
