--- a/archivesPage.html
+++ b/archivesPage.html
@@ -9,16 +9,25 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/main.css">
 	<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="css/ArchivesPageStyle.css" >
+	<link rel="stylesheet" href="css/footer.css">
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+
+  fetch("partials/footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer").innerHTML = html;
+  });
+</script>
 
 </head>
 
 <body>
-	<link rel="stylesheet" href="/css/NavigationBarStyle.css">
+	<link rel="stylesheet" href="css/NavigationBarStyle.css">
 
 <nav class="navbar" role="navigation" aria-label="Main Navigation">
   <div class="nav-container">
@@ -26,29 +35,29 @@
 
       <div class="nav-side brand">
         <a href="/">
-          <img src="/media/rbinfkzw/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
+          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
 
 
       <!-- אמצע – הקישורים -->
       <div class="nav-center nav-links">
-        <a class="nav-link" href="/קטגוריות/מוזיקה/">מוזיקה</a>
-        <a class="nav-link" href="/הסכתים/">הסכתים</a>
-        <a class="nav-link" href="/קטגוריות/סדרות-רשת/">סדרות רשת</a>
-        <a class="nav-link" href="/תרבות-ופנאי/">תרבות ופנאי</a>
-        <a class="nav-link" href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a>
-        <a class="nav-link" href="/ארכיון/">ארכיון</a>
+        <a class="nav-link" href="musicPage.html">מוזיקה</a>
+        <a class="nav-link" href="podcastsPage.html">הסכתים</a>
+        <a class="nav-link" href="sadarotReshet.html">סדרות רשת</a>
+        <a class="nav-link" href="culturePage.html">תרבות ופנאי</a>
+        <a class="nav-link" href="kidsPage.html">ילדים ונוער</a>
+        <a class="nav-link" href="archivesPage.html">ארכיון</a>
       </div>
 
 
       <!-- שמאל – כפתורים -->
       <div class="nav-side actions mr-1">
-        <a href="/חיפוש" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+        <a href="search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
           <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
         </a>
 
-        <a href="/מועדפים" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
+        <a href="favoritesPage.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
           <i class="fa-regular fa-heart" style="font-size: 24px;"></i>
         </a>
 
@@ -61,12 +70,12 @@
   </div>
 
   <div id="mobileMenu" class="mobile-menu">
-    <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
-    <a href="/הסכתים/" data-close="">הסכתים</a>
-    <a href="/קטגוריות/סדרות-רשת/" data-close="">סדרות רשת</a>
-    <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
-    <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
-    <a href="/ארכיון/" data-close="">ארכיון</a>
+    <a href="musicPage.html" data-close="">מוזיקה</a>
+    <a href="podcastsPage.html" data-close="">הסכתים</a>
+    <a href="sadarotReshet.html" data-close="">סדרות רשת</a>
+    <a href="culturePage.html" data-close="">תרבות ופנאי</a>
+    <a href="kidsPage.html" data-close="">ילדים ונוער</a>
+    <a href="archivesPage.html" data-close="">ארכיון</a>
   </div>
 </nav>
 
@@ -98,6 +107,11 @@
 
 	
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+	
+
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <link rel="stylesheet" href="/css/ArchivesPageStyle.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
@@ -106,7 +120,7 @@
 
 
 <div class="header-with-icon">
-        <img src="/media/a4xiiesd/ארכיון.png" alt="תרבות ופנאי" class="header-icon">
+        <img src="media\ארכיון.png" alt="תרבות ופנאי" class="header-icon">
         <h1 class="page-title" style="font-family: 'Assistant', sans-serif; font-size: 36px; font-weight: 700; color: #0B3D91; margin: 0;">
             ארכיון גל"צ</h1>
 </div>
@@ -117,12 +131,12 @@
     <div class="grid row1">
             <a href="/תכניות/יום-הולדת-70-לדני-בסן/" class="card">
                 <div class="card large">
-                    <img src="/media/a1gltqvy/בתןך-הפודקאסט-פי-2.jpg" alt="img">
+                    <img src="media\יהודית רביץ בתוך.jpg" alt="img">
                  </div>
             </a>
             <a href="/תכניות/יום-הולדת-75-לדני-סנדרסון/" class="card">
                 <div class="card large">
-                    <img src="/media/p5elio4n/בתןך-הפודקאסט-פי-2-1.jpg" alt="img">
+                    <img src="media\בתןך-הפודקאסט-פי-2-1.jpg" alt="img">
                  </div>
             </a>
     </div>
@@ -132,17 +146,17 @@
     <div class="grid row2">
             <a href="/תכניות/מרתון-אריאל-זילבר-שבועות-1989/" class="card">
                 <div class="card small">
-                    <img src="/media/bd4nhl4z/בתןך-הפודקאסט-פי-2.jpg" alt="img">
+                    <img src="media\יהודית רביץ בתוך.jpg" alt="img">
                 </div>
             </a>
             <a href="/תכניות/האדם-השלישי/" class="card">
                 <div class="card small">
-                    <img src="/media/xpjb1p10/האדם-השלישי.png" alt="img">
+                    <img src="media\יהודית רביץ בתוך.jpg" alt="img">
                 </div>
             </a>
             <a href="/תכניות/30-שנה-לציון-ללכתו-של-סשה-ארגוב/" class="card">
                 <div class="card small">
-                    <img src="/media/bsadyvc3/בתןך-הפודקאסט-פי-2-8.png" alt="img">
+                    <img src="media\יהודית רביץ בתוך.jpg" alt="img">
                 </div>
             </a>
 
@@ -154,6 +168,13 @@
 
 
 <style>
+    body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    background-color: #e6f0fa;
+}
+
     .swiper {
     position: relative;
     padding: 20px 60px; /* רווח לוחצים מצדדים */
@@ -168,7 +189,6 @@
     transform: translateY(-50%);
     width: 40px;
     height: 40px;
-    //background-color: rgba(0, 0, 0, 0.15);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -181,13 +201,11 @@
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
-    //background-color: rgba(0, 0, 0, 0.35);
     transform: translateY(-50%) scale(1.15);
 }
 
 .swiper-button-prev,
 .swiper-button-next {
-    //background-color: rgba(0,0,0,0.25);
     border-radius: 50%;
     width: 40px;
     height: 40px;
@@ -494,67 +512,67 @@ hr {
     <div class="swiper-wrapper" id="swiper-wrapper-17c4b3fbeaa8ccad" aria-live="polite">
                     <div class="swiper-slide swiper-slide-active" role="group" aria-label="1 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-גלי-עטרי/" title="מרתון גלי עטרי">
-                            <img src="/media/ouphuitw/בתןך-הפודקאסט-פי-2.jpg" alt="מרתון גלי עטרי">
+                            <img src="media\יהודית רביץ בתוך.jpg" alt="מרתון גלי עטרי">
                             <h3>מרתון גלי עטרי</h3>
                         </a>
                     </div>
                     <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-מאיר-בנאי/" title="מרתון מאיר בנאי">
-                            <img src="/media/gsqjejoh/בתןך-הפודקאסט-פי-2.jpg" alt="מרתון מאיר בנאי">
+                            <img src="media\יהודית רביץ בתוך.jpg" alt="מרתון מאיר בנאי">
                             <h3>מרתון מאיר בנאי</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="3 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-עפרה-חזה/" title="מרתון עפרה חזה">
-                            <img src="/media/zhrbfzq0/בתןך-הפודקאסט-פי-2-1.jpg" alt="מרתון עפרה חזה">
+                            <img src="media/zhrbfzq0/בתןך-הפודקאסט-פי-2-1.jpg" alt="מרתון עפרה חזה">
                             <h3>מרתון עפרה חזה</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="4 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-שלום-חנוך/" title="מרתון שלום חנוך">
-                            <img src="/media/4dma00d3/בתןך-הפודקאסט-פי-2-2.jpg" alt="מרתון שלום חנוך">
+                            <img src="media/4dma00d3/בתןך-הפודקאסט-פי-2-2.jpg" alt="מרתון שלום חנוך">
                             <h3>מרתון שלום חנוך</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="5 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-צביקה-פיק/" title="מרתון צביקה פיק">
-                            <img src="/media/jglftpn0/בתןך-הפודקאסט-פי-2-4.jpg" alt="מרתון צביקה פיק">
+                            <img src="media/jglftpn0/בתןך-הפודקאסט-פי-2-4.jpg" alt="מרתון צביקה פיק">
                             <h3>מרתון צביקה פיק</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="6 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-חוה-אלברשטיין/" title="מרתון חוה אלברשטיין">
-                            <img src="/media/rngf2xbd/באנר-חדש-חוה.jpg" alt="מרתון חוה אלברשטיין">
+                            <img src="media/rngf2xbd/באנר-חדש-חוה.jpg" alt="מרתון חוה אלברשטיין">
                             <h3>מרתון חוה אלברשטיין</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="7 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-עוזי-חיטמן/" title="מרתון עוזי חיטמן">
-                            <img src="/media/51nbfjx3/בתןך-הפודקאסט-פי-2-5.jpg" alt="מרתון עוזי חיטמן">
+                            <img src="media/51nbfjx3/בתןך-הפודקאסט-פי-2-5.jpg" alt="מרתון עוזי חיטמן">
                             <h3>מרתון עוזי חיטמן</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="8 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-אהוד-בנאי/" title="מרתון אהוד בנאי">
-                            <img src="/media/z2il4mxi/בתןך-הפודקאסט-פי-2-6.jpg" alt="מרתון אהוד בנאי">
+                            <img src="media/z2il4mxi/בתןך-הפודקאסט-פי-2-6.jpg" alt="מרתון אהוד בנאי">
                             <h3>מרתון אהוד בנאי</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="9 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-יהודית-רביץ/" title="מרתון יהודית רביץ">
-                            <img src="/media/24hmuwoo/בתןך-הפודקאסט-פי-2-7.jpg" alt="מרתון יהודית רביץ">
+                            <img src="media/24hmuwoo/בתןך-הפודקאסט-פי-2-7.jpg" alt="מרתון יהודית רביץ">
                             <h3>מרתון יהודית רביץ</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="10 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-גידי-גוב/" title="מרתון גידי גוב">
-                            <img src="/media/hvbhfknf/בתןך-הפודקאסט-פי-2-8.jpg" alt="מרתון גידי גוב">
+                            <img src="media/hvbhfknf/בתןך-הפודקאסט-פי-2-8.jpg" alt="מרתון גידי גוב">
                             <h3>מרתון גידי גוב</h3>
                         </a>
                     </div>
                     <div class="swiper-slide" role="group" aria-label="11 / 11" style="width: 216.25px; margin-left: 18px;">
                         <a href="/תכניות/מרתון-יהודה-פוליקר/" title="מרתון יהודה פוליקר">
-                            <img src="/media/i4tm5v4e/בתןך-הפודקאסט-פי-2-9.jpg" alt="מרתון יהודה פוליקר">
+                            <img src="media/i4tm5v4e/בתןך-הפודקאסט-פי-2-9.jpg" alt="מרתון יהודה פוליקר">
                             <h3>מרתון יהודה פוליקר</h3>
                         </a>
                     </div>
@@ -727,82 +745,9 @@ const swiper2 = new Swiper(".mySwiper2", {
                     </a>
                 </div>
     </div>
-  <a href="/קטגוריות/ארכיון/" class="btn">לתכניות נוספות לחצו כאן</a>
+  <!-- <a href="/קטגוריות/ארכיון/" class="btn">לתכניות נוספות לחצו כאן</a> -->
 </div>
 
-
-
-	<link rel="stylesheet" href="/css/footer.css">
-
-<footer class="custom-footer">
-  <div class="footer-container">
-    
-    <!-- טור ימין עם לוגו -->
-    <div class="footer-logo">
-      <a href="/">
-        <img src="/media/rbinfkzw/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="גלצ פלוס">
-      </a>
-    </div>
-
-    <!-- טור קישורים -->
-    <div class="footer-column footer-links text-center">
-      <h3>עמודי האתר</h3>
-      <ul>
-        <li><a href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a></li>
-        <li><a href="/קטגוריות/סדרות-רשת/">סדרות רשת</a></li>
-        <li><a href="/תרבות-ופנאי/">תרבות ופנאי</a></li>
-        <li><a href="/הסכתים/">הסכתים</a></li>
-        <li><a href="/קטגוריות/מוזיקה/">מוזיקה</a></li>
-        <li><a href="/ארכיון/">ארכיון</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column footer-links text-center">
-      <h3>תכנים פופלרים</h3>
-      <ul>
-        <li><a href="/תכניות/בטלים-בשישי/">בטלים בשישי</a></li>
-        <li><a href="/תכניות/דור-הביט/">דור הביט</a></li>
-        <li><a href="/תכניות/הבית-של-יעל/">הבית של יעל</a></li>
-        <li><a href="/תכניות/ספיישלים-מוזיקלים/">ספיישלים מוזיקלים</a></li>
-        <li><a href="/תכניות/מסע-כומתות/">מסע כומתות</a></li>
-        <li><a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">פודקאסט על מוזיקה וטכנולוגיה</a></li>
-      </ul>
-    </div>
-
-    <!-- טור אמצע: רשתות חברתיות -->
-    <div class="footer-column footer-social text-center">
-      <h3>עקבו אחרינו</h3>
-      <div class="social-icons">
-        <a href="https://did.li/EDo6q" target="_blank"><img src="/media/jzrgbn12/tik-tok1.svg" alt="TikTok"></a>
-        <a href="https://did.li/a1imC" target="_blank"><img src="/media/xa3hv3cn/youtube1.svg" alt="YouTube"></a>
-        <a href="https://did.li/P62aa" target="_blank"><img src="/media/sozpt2h4/facebook1.svg" alt="Facebook"></a>
-        <a href="https://did.li/hJ8TY" target="_blank"><img src="/media/u3hhzcov/instagram1.svg" alt="Instagram"></a>
-      </div>
-    </div>
-
-    <!-- טור שמאל: הורדה בנייד -->
-    <div class="footer-column footer-apps text-center">
-      <h3>להורדה גם בנייד</h3>
-      <div class="app-buttons">
-        <a href="https://did.li/sbLZH" target="_blank">
-          <img src="/media/jnpglslh/screenshot_2025-08-08_162822-removebg-preview.png" alt="Google Play">
-        </a>
-        <a href="https://did.li/UOQIw" target="_blank">
-          <img src="/media/fpcogxol/screenshot_2025-08-08_162822-removebg-preview-1.png" alt="App Store">
-        </a>
-      </div>
-    </div>
-
-  </div>
-
-  <!-- זכויות יוצרים -->
-  <div class="footer-bottom">
-    <p>© 2025 כל הזכויות שמורות - גל"צ פלוס</p>
-  </div>
-</footer>
-
-
-
-
+    <div id="footer"></div>
 
 </body></html>
