--- a/kidsPage.html
+++ b/kidsPage.html
@@ -9,16 +9,23 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&amp;family=Rubik:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/main.css">
+  	<link rel="stylesheet" href="css/footer.css">
+
 	<!-- Bootstrap CSS -->
 
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
+<script>
+  fetch("partials/footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer").innerHTML = html;
+  });
+</script>
 </head>
 
 <body>
-	<link rel="stylesheet" href="/css/NavigationBarStyle.css">
+	<link rel="stylesheet" href="css/NavigationBarStyle.css">
 
 <nav class="navbar" role="navigation" aria-label="Main Navigation">
   <div class="nav-container">
@@ -26,29 +33,29 @@
 
       <div class="nav-side brand">
         <a href="/">
-          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10;">
+          <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
 
 
       <!-- אמצע – הקישורים -->
       <div class="nav-center nav-links">
-        <a class="nav-link" href="/קטגוריות/מוזיקה/">מוזיקה</a>
-        <a class="nav-link" href="/הסכתים/">הסכתים</a>
-        <a class="nav-link" href="/קטגוריות/סדרות-רשת/">סדרות רשת</a>
-        <a class="nav-link" href="/תרבות-ופנאי/">תרבות ופנאי</a>
-        <a class="nav-link" href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a>
-        <a class="nav-link" href="/ארכיון/">ארכיון</a>
+        <a class="nav-link" href="musicPage.html">מוזיקה</a>
+        <a class="nav-link" href="podcastsPage.html">הסכתים</a>
+        <a class="nav-link" href="sadarotReshet.html">סדרות רשת</a>
+        <a class="nav-link" href="culturePage.html">תרבות ופנאי</a>
+        <a class="nav-link" href="kidsPage.html">ילדים ונוער</a>
+        <a class="nav-link" href="archivesPage.html">ארכיון</a>
       </div>
 
 
       <!-- שמאל – כפתורים -->
       <div class="nav-side actions mr-1">
-        <a href="/חיפוש" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+        <a href="search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
           <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
         </a>
 
-        <a href="/מועדפים" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
+        <a href="favoritesPage.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Favorites">
           <i class="fa-regular fa-heart" style="font-size: 24px;"></i>
         </a>
 
@@ -61,12 +68,12 @@
   </div>
 
   <div id="mobileMenu" class="mobile-menu">
-    <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
-    <a href="/הסכתים/" data-close="">הסכתים</a>
-    <a href="/קטגוריות/סדרות-רשת/" data-close="">סדרות רשת</a>
-    <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
-    <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
-    <a href="/ארכיון/" data-close="">ארכיון</a>
+    <a href="musicPage.html" data-close="">מוזיקה</a>
+    <a href="podcastsPage.html" data-close="">הסכתים</a>
+    <a href="sadarotReshet.html" data-close="">סדרות רשת</a>
+    <a href="culturePage.html" data-close="">תרבות ופנאי</a>
+    <a href="kidsPage.html" data-close="">ילדים ונוער</a>
+    <a href="archivesPage.html" data-close="">ארכיון</a>
   </div>
 </nav>
 
@@ -97,7 +104,12 @@
 <!-- <div style="height:84px;" > </div> -->
 
 	
-<link rel="stylesheet" href="/css/CategoryStyle.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+	
+<link rel="stylesheet" href="css/CategoryStyle.css">
 
 
     <title>ילדים ונוער</title>
@@ -234,77 +246,6 @@
     }
 </style>
 
-	<link rel="stylesheet" href="/css/footer.css">
-
-<footer class="custom-footer">
-  <div class="footer-container">
-    
-    <!-- טור ימין עם לוגו -->
-    <div class="footer-logo">
-      <a href="/">
-        <img src="/media/rbinfkzw/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="גלצ פלוס">
-      </a>
-    </div>
-
-    <!-- טור קישורים -->
-    <div class="footer-column footer-links text-center">
-      <h3>עמודי האתר</h3>
-      <ul>
-        <li><a href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a></li>
-        <li><a href="/קטגוריות/סדרות-רשת/">סדרות רשת</a></li>
-        <li><a href="/תרבות-ופנאי/">תרבות ופנאי</a></li>
-        <li><a href="/הסכתים/">הסכתים</a></li>
-        <li><a href="/קטגוריות/מוזיקה/">מוזיקה</a></li>
-        <li><a href="/ארכיון/">ארכיון</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column footer-links text-center">
-      <h3>תכנים פופלרים</h3>
-      <ul>
-        <li><a href="/תכניות/בטלים-בשישי/">בטלים בשישי</a></li>
-        <li><a href="/תכניות/דור-הביט/">דור הביט</a></li>
-        <li><a href="/תכניות/הבית-של-יעל/">הבית של יעל</a></li>
-        <li><a href="/תכניות/ספיישלים-מוזיקלים/">ספיישלים מוזיקלים</a></li>
-        <li><a href="/תכניות/מסע-כומתות/">מסע כומתות</a></li>
-        <li><a href="/תכניות/פודקאסט-על-מוזיקה-וטכנולוגיה/">פודקאסט על מוזיקה וטכנולוגיה</a></li>
-      </ul>
-    </div>
-
-    <!-- טור אמצע: רשתות חברתיות -->
-    <div class="footer-column footer-social text-center">
-      <h3>עקבו אחרינו</h3>
-      <div class="social-icons">
-        <a href="https://did.li/EDo6q" target="_blank"><img src="/media/jzrgbn12/tik-tok1.svg" alt="TikTok"></a>
-        <a href="https://did.li/a1imC" target="_blank"><img src="/media/xa3hv3cn/youtube1.svg" alt="YouTube"></a>
-        <a href="https://did.li/P62aa" target="_blank"><img src="/media/sozpt2h4/facebook1.svg" alt="Facebook"></a>
-        <a href="https://did.li/hJ8TY" target="_blank"><img src="/media/u3hhzcov/instagram1.svg" alt="Instagram"></a>
-      </div>
-    </div>
-
-    <!-- טור שמאל: הורדה בנייד -->
-    <div class="footer-column footer-apps text-center">
-      <h3>להורדה גם בנייד</h3>
-      <div class="app-buttons">
-        <a href="https://did.li/sbLZH" target="_blank">
-          <img src="/media/jnpglslh/screenshot_2025-08-08_162822-removebg-preview.png" alt="Google Play">
-        </a>
-        <a href="https://did.li/UOQIw" target="_blank">
-          <img src="/media/fpcogxol/screenshot_2025-08-08_162822-removebg-preview-1.png" alt="App Store">
-        </a>
-      </div>
-    </div>
-
-  </div>
-
-  <!-- זכויות יוצרים -->
-  <div class="footer-bottom">
-    <p>© 2025 כל הזכויות שמורות - גל"צ פלוס</p>
-  </div>
-</footer>
-
-
-
-
+    <div id="footer"></div>
 
 </body></html>
