--- a/search.html
+++ b/search.html
@@ -32,7 +32,7 @@
     <div class="nav-row">
 
       <div class="nav-side brand">
-        <a href="/web1">
+        <a href="/">
           <img src="media/screenshot_2025-08-10_183245-removebg-preview-1.png" alt="logo" style="width: 90px; height: 60px; margin-left: 10px;">
         </a>
       </div>
@@ -40,18 +40,18 @@
 
       <!-- אמצע – הקישורים -->
       <div class="nav-center nav-links">
-        <a class="nav-link" href="/קטגוריות/מוזיקה/">מוזיקה</a>
-        <a class="nav-link" href="/הסכתים/">הסכתים</a>
-        <a class="nav-link" href="programsSeries.html">סדרות רשת</a>
-        <a class="nav-link" href="/תרבות-ופנאי/">תרבות ופנאי</a>
-        <a class="nav-link" href="/קטגוריות/ילדים-ונוער/">ילדים ונוער</a>
-        <a class="nav-link" href="/ארכיון/">ארכיון</a>
+        <a class="nav-link" href="musicPage.html">מוזיקה</a>
+        <a class="nav-link" href="podcastsPage.html">הסכתים</a>
+        <a class="nav-link" href="sadarotReshet.html">סדרות רשת</a>
+        <a class="nav-link" href="culturePage.html">תרבות ופנאי</a>
+        <a class="nav-link" href="kidsPage.html">ילדים ונוער</a>
+        <a class="nav-link" href="archivesPage.html">ארכיון</a>
       </div>
 
 
       <!-- שמאל – כפתורים -->
       <div class="nav-side actions mr-1">
-        <a href="/search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
+        <a href="search.html" style="color: none; text-decoration: none;" class="icon-btn" aria-label="Search">
           <i class="fa-solid fa-magnifying-glass" style="font-size: 24px;"></i>
         </a>
 
@@ -68,12 +68,12 @@
   </div>
 
   <div id="mobileMenu" class="mobile-menu">
-    <a href="/קטגוריות/מוזיקה/" data-close="">מוזיקה</a>
-    <a href="/הסכתים/" data-close="">הסכתים</a>
-    <a href="programsSeries.html" data-close="">סדרות רשת</a>
-    <a href="/תרבות-ופנאי/" data-close="">תרבות ופנאי</a>
-    <a href="/קטגוריות/ילדים-ונוער/" data-close="">ילדים ונוער</a>
-    <a href="/ארכיון/" data-close="">ארכיון</a>
+    <a href="musicPage.html" data-close="">מוזיקה</a>
+    <a href="podcastsPage.html" data-close="">הסכתים</a>
+    <a href="sadarotReshet.html" data-close="">סדרות רשת</a>
+    <a href="culturePage.html" data-close="">תרבות ופנאי</a>
+    <a href="kidsPage.html" data-close="">ילדים ונוער</a>
+    <a href="archivesPage.html" data-close="">ארכיון</a>
   </div>
 </nav>
 
@@ -100,7 +100,15 @@
   });
 </script>
 
-<!-- רווח עליון לתוכן כדי למנוע חפיפה -->
+<script>
+  fetch("partials/footer.html")
+  .then(res => res.text())
+  .then(html => {
+    document.getElementById("footer").innerHTML = html;
+  });
+</script>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <h1 class="text-center mt-3"
     style="font-family: 'Assistant', sans-serif; font-size: 40px; font-weight: 700; color: #0B3D91;">חיפוש תכנית</h1>
